--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: "KENTNL's DZil plugin testing tool"
 author:
   - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
+  Dist::Zilla::App::Command::authordeps: '0'
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
   Test::More: '0.89'
@@ -18,16 +19,17 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.003003'
+    version: '1.004000'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.003003'
+    version: '1.004000'
 recommends:
   Test::Differences: '0'
   Test::More: '1.001006'
 requires:
   Carp: '0'
   Data::DPath: '0'
+  Dist::Zilla::App::Tester: '0'
   Dist::Zilla::Tester: '0'
   Dist::Zilla::Util: '0'
   Module::Runtime: '0'
@@ -47,27 +49,30 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.003003'
+version: '1.004000'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142690'
     Carp: '1.34'
     Data::DPath: '0.50'
+    Dist::Zilla: '5.020'
+    Dist::Zilla::App::Command::authordeps: '5.020'
     Dist::Zilla::App::Command::bakeini: '0.001002'
+    Dist::Zilla::App::Tester: '5.020'
     Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003006'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
-    Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.003'
+    Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.004'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
     Dist::Zilla::Plugin::EOLTests: '0.02'
-    Dist::Zilla::Plugin::Git::Check: '2.024'
-    Dist::Zilla::Plugin::Git::Commit: '2.024'
-    Dist::Zilla::Plugin::Git::CommitBuild: '2.024'
+    Dist::Zilla::Plugin::Git::Check: '2.025'
+    Dist::Zilla::Plugin::Git::Commit: '2.025'
+    Dist::Zilla::Plugin::Git::CommitBuild: '2.025'
     Dist::Zilla::Plugin::Git::Contributors: '0.007'
-    Dist::Zilla::Plugin::Git::GatherDir: '2.024'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.003000'
-    Dist::Zilla::Plugin::Git::Tag: '2.024'
+    Dist::Zilla::Plugin::Git::GatherDir: '2.025'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.004000'
+    Dist::Zilla::Plugin::Git::Tag: '2.025'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.020'
     Dist::Zilla::Plugin::MakeMaker: '5.020'
@@ -84,7 +89,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
     Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
+    Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.003'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
+    Dist::Zilla::Plugin::Prereqs::Soften: '0.005001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
     Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001004'
@@ -96,9 +103,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
     Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
     Dist::Zilla::Plugin::TestRelease: '5.020'
-    Dist::Zilla::Plugin::Twitter: '0.025'
+    Dist::Zilla::Plugin::Twitter: '0.026'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.020003'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.021000'
     Dist::Zilla::Tester: '5.020'
     Dist::Zilla::Util: '5.020'
     ExtUtils::MakeMaker: '6.98'
@@ -199,7 +206,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::GatherDir'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
@@ -389,6 +396,10 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/BundleDevelSuggests'
       version: '5.020'
     -
+      class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
+      name: '@Author::KENTNL/Prereqs::AuthorDeps'
+      version: '0.003'
+    -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
       version: '1.003'
@@ -448,7 +459,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::Check'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
@@ -465,29 +476,29 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/commit_dirty_files'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.003003-source
+          tag: 1.004000-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/tag_master'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.003000'
+      version: '0.004000'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
-      version: '0.003'
+      version: '0.004'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
@@ -505,7 +516,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/commit_release_changes'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::CommitBuild
       config:
@@ -519,21 +530,21 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::CommitBuild'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.003003'
+          tag: '1.004000'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/tag_release'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
@@ -541,7 +552,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
-      version: '0.025'
+      version: '0.026'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -607,7 +618,7 @@ x_Dist_Zilla:
           modules_from_features: ~
           to_relationship: recommends
       name: Prereqs::Soften
-      version: '0.005000'
+      version: '0.005001'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
