--- a/META.yml
+++ b/META.yml
@@ -7,10 +7,12 @@ build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
   Test::More: '0.89'
+  perl: '5.008'
 configure_requires:
   ExtUtils::MakeMaker: '0'
+  perl: '5.008'
 dynamic_config: '0'
-generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142690'
+generated_by: 'Dist::Zilla version 5.022, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,16 +21,16 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.004000'
+    version: '1.004001'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.004000'
+    version: '1.004001'
 recommends:
+  Data::DPath: '0'
   Test::Differences: '0'
-  Test::More: '1.001006'
+  Test::More: '1.001008'
 requires:
   Carp: '0'
-  Data::DPath: '0'
   Dist::Zilla::App::Tester: '0'
   Dist::Zilla::Tester: '0'
   Dist::Zilla::Util: '0'
@@ -49,46 +51,45 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.004000'
+version: '1.004001'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142690'
     Carp: '1.34'
     Data::DPath: '0.50'
-    Dist::Zilla: '5.020'
-    Dist::Zilla::App::Command::authordeps: '5.020'
-    Dist::Zilla::App::Command::bakeini: '0.001002'
-    Dist::Zilla::App::Tester: '5.020'
-    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003006'
-    Dist::Zilla::Plugin::Authority: '1.006'
-    Dist::Zilla::Plugin::AutoPrereqs: '5.020'
+    Dist::Zilla: '5.022'
+    Dist::Zilla::App::Command::authordeps: '5.022'
+    Dist::Zilla::App::Command::bakeini: '0.001003'
+    Dist::Zilla::App::Tester: '5.022'
+    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.004000'
+    Dist::Zilla::Plugin::Authority: '1.009'
+    Dist::Zilla::Plugin::AutoPrereqs: '5.022'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.004'
-    Dist::Zilla::Plugin::ConfirmRelease: '5.020'
+    Dist::Zilla::Plugin::ConfirmRelease: '5.022'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
-    Dist::Zilla::Plugin::EOLTests: '0.02'
     Dist::Zilla::Plugin::Git::Check: '2.025'
     Dist::Zilla::Plugin::Git::Commit: '2.025'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.025'
-    Dist::Zilla::Plugin::Git::Contributors: '0.007'
+    Dist::Zilla::Plugin::Git::Contributors: '0.008'
     Dist::Zilla::Plugin::Git::GatherDir: '2.025'
     Dist::Zilla::Plugin::Git::NextRelease: '0.004000'
     Dist::Zilla::Plugin::Git::Tag: '2.025'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
-    Dist::Zilla::Plugin::License: '5.020'
-    Dist::Zilla::Plugin::MakeMaker: '5.020'
-    Dist::Zilla::Plugin::Manifest: '5.020'
-    Dist::Zilla::Plugin::ManifestSkip: '5.020'
-    Dist::Zilla::Plugin::MetaConfig: '5.020'
+    Dist::Zilla::Plugin::License: '5.022'
+    Dist::Zilla::Plugin::MakeMaker: '5.022'
+    Dist::Zilla::Plugin::Manifest: '5.022'
+    Dist::Zilla::Plugin::ManifestSkip: '5.022'
+    Dist::Zilla::Plugin::MetaConfig: '5.022'
     Dist::Zilla::Plugin::MetaData::BuiltWith: '1.003001'
-    Dist::Zilla::Plugin::MetaJSON: '5.020'
+    Dist::Zilla::Plugin::MetaJSON: '5.022'
     Dist::Zilla::Plugin::MetaProvides::Package: '2.001002'
-    Dist::Zilla::Plugin::MetaTests: '5.020'
-    Dist::Zilla::Plugin::MetaYAML: '5.020'
-    Dist::Zilla::Plugin::MinimumPerl: '1.003'
-    Dist::Zilla::Plugin::PodCoverageTests: '5.020'
-    Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
+    Dist::Zilla::Plugin::MetaTests: '5.022'
+    Dist::Zilla::Plugin::MetaYAML: '5.022'
+    Dist::Zilla::Plugin::MinimumPerl: '1.004'
+    Dist::Zilla::Plugin::PodCoverageTests: '5.022'
+    Dist::Zilla::Plugin::PodSyntaxTests: '5.022'
     Dist::Zilla::Plugin::PodWeaver: '4.006'
-    Dist::Zilla::Plugin::Prereqs: '5.020'
+    Dist::Zilla::Plugin::Prereqs: '5.022'
     Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.003'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
     Dist::Zilla::Plugin::Prereqs::Soften: '0.005001'
@@ -98,30 +99,32 @@ x_BuiltWith:
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
     Dist::Zilla::Plugin::Test::Compile::PerFile: '0.003000'
+    Dist::Zilla::Plugin::Test::EOL: '0.14'
     Dist::Zilla::Plugin::Test::Kwalitee: '2.11'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
     Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
-    Dist::Zilla::Plugin::TestRelease: '5.020'
+    Dist::Zilla::Plugin::TestRelease: '5.022'
     Dist::Zilla::Plugin::Twitter: '0.026'
-    Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.021000'
-    Dist::Zilla::Tester: '5.020'
-    Dist::Zilla::Util: '5.020'
-    ExtUtils::MakeMaker: '6.98'
+    Dist::Zilla::Plugin::UploadToCPAN: '5.022'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.022000'
+    Dist::Zilla::Tester: '5.022'
+    Dist::Zilla::Util: '5.022'
+    ExtUtils::MakeMaker: '7.00'
     File::Spec: '3.49'
     Module::Runtime: '0.014'
     Moose: '2.1213'
-    Path::Tiny: '0.058'
+    Path::Tiny: '0.059'
     Pod::Coverage::TrustPod: '0.100003'
     Sub::Exporter: '0.987'
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
-    Test::DZil: '5.020'
+    Test::DZil: '5.022'
     Test::Differences: '0.62'
+    Test::EOL: '1.5'
     Test::Fatal: '0.013'
     Test::Kwalitee: '1.22'
-    Test::More: '1.001006'
+    Test::More: '1.001008'
     Test::Pod: '1.48'
     Test::Pod::Coverage: '1.10'
     Try::Tiny: '0.22'
@@ -143,7 +146,7 @@ x_BuiltWith:
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.16.1-aufs x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.17.1-aufs x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
     version: '5.021003'
@@ -151,7 +154,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
@@ -164,7 +167,7 @@ x_Dist_Zilla:
             -
               class: Dist::Zilla::Plugin::FinderCode
               name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-              version: '5.020'
+              version: '5.022'
         Dist::Zilla::Role::MetaProvider::Provider:
           inherit_missing: '1'
           inherit_version: '1'
@@ -197,10 +200,22 @@ x_Dist_Zilla:
           order_by: name
           paths: []
       name: '@Author::KENTNL/Git::Contributors'
-      version: '0.007'
+      version: '0.008'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
+        Dist::Zilla::Plugin::GatherDir:
+          exclude_filename:
+            - README
+            - README.mkdn
+            - README.pod
+            - LICENSE
+          exclude_match: []
+          follow_symlinks: '0'
+          include_dotfiles: '1'
+          prefix: ''
+          prune_directory: []
+          root: .
         Dist::Zilla::Plugin::Git::GatherDir:
           include_untracked: '0'
         Dist::Zilla::Role::Git::Repo:
@@ -210,19 +225,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::KENTNL/MetaJSON'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::KENTNL/MetaYAML'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::CopyFilesFromBuild
       name: '@Author::KENTNL/CopyXBuild'
@@ -230,15 +245,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::KENTNL/PodCoverageTests'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::KENTNL/PodSyntaxTests'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
@@ -252,9 +267,12 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/Test::Kwalitee'
       version: '2.11'
     -
-      class: Dist::Zilla::Plugin::EOLTests
-      name: '@Author::KENTNL/EOLTests'
-      version: '0.02'
+      class: Dist::Zilla::Plugin::Test::EOL
+      config:
+        Dist::Zilla::Plugin::Test::EOL:
+          filename: xt/author/eol.t
+      name: '@Author::KENTNL/Test::EOL'
+      version: '0.14'
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: '@Author::KENTNL/Test::MinimumVersion'
@@ -262,7 +280,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/Test::Compile::PerFile/AUTOVIV/:InstallModulesPM'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Test::Compile::PerFile
       config:
@@ -284,7 +302,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::KENTNL/ManifestSkip'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::RewriteVersion::Sanitized
       config:
@@ -304,89 +322,89 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: -SingleEncoding
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Name
               name: Name
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Version
               name: Version
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Region
               name: prelude
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: FILTER_METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: TERMINATOR_LIST_METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: MIRROR_LIST_METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: PRIVATE_ATTRIBUTES
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Collect
               name: PRIVATE_METHODS
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Leftovers
               name: Leftovers
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Region
               name: postlude
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Authors
               name: Authors
-              version: '4.006'
+              version: '4.007'
             -
               class: Pod::Weaver::Section::Legal
               name: Legal
-              version: '4.006'
+              version: '4.007'
       name: '@Author::KENTNL/PodWeaver'
       version: '4.006'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -394,7 +412,7 @@ x_Dist_Zilla:
           phase: develop
           type: suggests
       name: '@Author::KENTNL/BundleDevelSuggests'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
       name: '@Author::KENTNL/Prereqs::AuthorDeps'
@@ -402,22 +420,22 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
-      version: '1.003'
+      version: '1.004'
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::KENTNL/Authority'
-      version: '1.006'
+      version: '1.009'
     -
       class: Dist::Zilla::Plugin::MakeMaker
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: '10'
       name: '@Author::KENTNL/MakeMaker'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
       name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
-      version: '0.003006'
+      version: '0.004000'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -440,11 +458,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::KENTNL/ConfirmRelease'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Git::Check
       config:
@@ -483,7 +501,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.004000-source
+          tag: 1.004001-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -537,7 +555,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.004000'
+          tag: '1.004001'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -548,7 +566,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
@@ -598,7 +616,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/::Role::BundleDeps'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -606,7 +624,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::Prereqs::Soften
       config:
@@ -615,6 +633,7 @@ x_Dist_Zilla:
             - develop.requires
           modules:
             - Test::Differences
+            - Data::DPath
           modules_from_features: ~
           to_relationship: recommends
       name: Prereqs::Soften
@@ -622,42 +641,42 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.020'
+      version: '5.022'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-      version: '5.020'
+      version: '5.022'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: '0'
-    version: '5.020'
+    version: '5.022'
 x_authority: cpan:KENTNL
