--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,8 @@ provides:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
     version: '1.004003'
 recommends:
+  Data::DPath: '0'
+  Test::Differences: '0'
   Test::More: '1.001009'
 requires:
   Carp: '0'
@@ -54,6 +56,7 @@ x_BuiltWith:
   modules:
     CPAN::Meta: '2.142690'
     Carp: '1.34'
+    Data::DPath: '0.50'
     Dist::Zilla: '5.024'
     Dist::Zilla::App::Command::authordeps: '5.024'
     Dist::Zilla::App::Command::bakeini: '0.001004'
@@ -89,7 +92,6 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Prereqs: '5.024'
     Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.004'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
-    Dist::Zilla::Plugin::Prereqs::Soften: '0.005001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
     Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001004'
@@ -117,6 +119,7 @@ x_BuiltWith:
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
     Test::DZil: '5.024'
+    Test::Differences: '0.62'
     Test::EOL: '1.5'
     Test::Fatal: '0.013'
     Test::Kwalitee: '1.22'
@@ -622,18 +625,21 @@ x_Dist_Zilla:
       name: Prereqs
       version: '5.024'
     -
-      class: Dist::Zilla::Plugin::Prereqs::Soften
+      class: Dist::Zilla::Plugin::Prereqs
       config:
-        Dist::Zilla::Plugin::Prereqs::Soften:
-          copy_to:
-            - develop.requires
-          modules:
-            - Test::Differences
-            - Data::DPath
-          modules_from_features: ~
-          to_relationship: recommends
-      name: Prereqs::Soften
-      version: '0.005001'
+        Dist::Zilla::Plugin::Prereqs:
+          phase: runtime
+          type: recommends
+      name: RuntimeRecommends
+      version: '5.024'
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: develop
+          type: requires
+      name: DevelopRequires
+      version: '5.024'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
